<resources>
    <string name="app_name">www.properties.realestate</string>
    <string name="real_estate">realEstate.app</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!-- main activity -->
    <string name="rent">Rent</string>
    <string name="sell">Forsale</string>

    <!--dialog-->
    <string name="Yes">Yes</string>
    <string name="Cancel">Cancel</string>
    <string name="No">No</string>
    <string name="Leave">Leave ?</string>
    <string name="quit_post_title">Leave ?</string>
    <string name="quit_post_message">All data will be lost</string>

    <!--post data-->
    <string name="price">\u0024 %1$s USD </string>
    <string name="price_rent">\u0024 %1$s USD / %2$s</string>
    <string name="location"> %1$s, %2$s, %3$s </string>
    <string name="country_res"><![CDATA[<b>Country:</b> %1$s]]></string>
    <string name="city_res"><![CDATA[<b>City:</b> %1$s]]></string>
    <string name="area_res"><![CDATA[<b>Area:</b> %1$s]]></string>
    <string name="location_icon_description">Location</string>
    <string name="post_image_description">Propriety image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--bottom navigation menu-->
    <string name="home">Home</string>
    <string name="liked">Liked</string>
    <string name="add_a_post">@string/post_advert</string>

    <!--    permission-->
    <string name="permission_required">Permission required</string>
    <string name="you_cant">You can\'t choose a image or a video because the App does not have the Permission to access your Gallery</string>
    <string name="authorise">Authorize</string>
    <string name="no_thanks">No Thanks</string>
    <string name="permission">Your permission is necessary to use this service</string>
    <string name="OK">OK</string>

    <!--    search fragment-->
    <string name="search">Search</string>
    <string name="select">Select Files</string>

    <!--    add post activity-->
    <string name="back">Back</string>
    <string name="next">Next</string>

    <!--    image select strings-->
    <string name="remove">Remove</string>
    <string name="image">Image</string>
    <string name="show_first">Show First</string>

    <!--    step two strings-->
    <string name="title">Title</string>
    <string name="category">Select a Category</string>
    <string name="obligatory">Obligatory</string>
    <string name="price_et">Price (USD $)</string>
    <string name="usd">USD</string>
    <string name="eu">EU</string>
    <string name="currency">Currency</string>
    <string name="type">Type :</string>

    <!--    step three strings-->
    <string name="add_description">Add a description</string>
    <string name="description">Description</string>
    <string name="placeholder_description">Real estate is defined as the land and any permanent structures, like a home, or improvements attached to the land, whether natural or man-made.</string>
    <string name="country">Choose a Country</string>
    <string name="city">Cities</string>
    <string name="street">Area Name</string>
    <string name="error">Unexpected Error</string>
    <string name="wrong_code">Wrong verification code</string>
    <string name="finish_dialog_title">Last Step</string>
    <string name="finish_dialog_message">Your post will be verified and approved by admins as soon as possible</string>
    <string name="or">Or</string>
    <string name="automatically_get_location">Automatically get location</string>

    <!--    sms send strings-->
    <string name="verify_your_number">Verify Your Phone Number</string>
    <string name="please_enter_your_country_and_your_phone_number">Please enter your Country and your Phone Number</string>
    <string name="send">SEND</string>
    <string name="no_user">No user</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up</string>
    <string name="verify">Verify</string>
    <string name="verification_code">Verification code</string>
    <string name="add_additional_data_name">Add additional data (name,....)</string>

    <!--    post page strings-->
    <string name="call">Call</string>
    <string name="message">Message</string>
    <!--    to modify-->
    <string name="image_url">https://picsum.photos/%1$s</string>
    <string name="video_url">video_base_url%1$s</string>
    <string name="error_loading_image">Error Loading image</string>
    <string name="no_gps">Please Enable Your GPS</string>
    <string name="name">Name</string>
    <string name="preferred_communication_method">Preferred communication method:</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="phonecall">PhoneCall</string>
    <string name="both">Both</string>
    <string name="enter_name">Please Enter Your name</string>
    <string name="finish">Finish</string>

    <!--    prefs keys-->
    <string name="cookie_token">cookie_token</string>
    <string name="user_id">user_id</string>
    <string name="success">Register Success</string>
    <string name="all">All</string>
    <string name="progress_string">uploading %1$d</string>
    <string name="pls_type_code">Please enter the verification code sent to you by SMS</string>
    <string name="report_this_post">Report This Post</string>
    <string name="submit">Submit</string>
    <string name="reason">Reason</string>
    <string name="proprety_type">Proprety Type</string>
    <string name="error_getting_type">error getting types</string>
    <string name="phone_number">Phone Number</string>
    <string name="sms_send">Sms send</string>
    <string name="detail_image">detail image</string>
    <string name="category_type">%1$s, %2$s</string>
    <string name="detail_separator">:</string>
    <string name="details">Details</string>
    <string name="try_again">Error authenticating please try again</string>
    <string name="no_defined">-</string>
    <string name="image_placeholder">image placeholder</string>
    <string name="building_age">Building Age</string>
    <string name="is_furnished">Furnished</string>
    <string name="has_balcony">Balcony</string>
    <string name="is_new">New</string>
    <string name="has_gym">Gym</string>
    <string name="has_swimming_pool">Swimming Pool</string>
    <string name="has_parking">Parking</string>
    <string name="elevator">Elevator</string>
    <string name="security">Security</string>
    <string name="number_of_floors">Floors in the building</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="number_of_bathrooms">Number of elevators</string>
    <string name="floor_number">Floor Number</string>
    <string name="space">Space</string>
    <string name="max_string">Media selection limit exceeded</string>
    <string name="property_condition">Property Condition (required *)</string>
    <string name="property_condition_text">Property Condition</string>
    <string name="required">required *</string>

    <!--    propriety conditions-->
    <string name="luxury">Luxury</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good</string>
    <string name="normal">Normal</string>

    <string name="extras">Extras</string>
    <string name="location_tv">Location</string>
    <string name="meter">m²</string>
    <string name="foot">foot²</string>
    <string name="zero">0</string>
    <string name="instagram">Instagram</string>
    <string name="email_us">Email us</string>
    <string name="profile">Profile</string>
    <string name="owner_photo">Owner photo</string>
    <string name="long_detail">%1$s : %2$s</string>
    <string name="jpg_jpeg_png_webp_mp4_or_webm">Jpg, Jpeg, Png, WebP, Mp4 or WebM</string>
    <string name="up_to_59_seconds">Up to 59 seconds</string>
    <string name="less_than_100_mb">Less than 100 Mb</string>
    <string name="failed_media_selection">You exceeded limit size of the files 100mb/59s </string>
    <string name="share">Share</string>
    <string name="country_flag">Country Flag</string>
    <string name="choose_a_category">Categories</string>
    <string name="price_filter">Price Filter</string>
    <string name="none">None</string>
    <string name="up">High</string>
    <string name="down">Low</string>
    <string name="no_call_msg">No phone number provided by the owner</string>
    <string name="website">Visit our website</string>
    <string name="real_estate_website">https://realestatefy.vercel.app/</string>
    <string name="downtown">Downtown</string>
    <string name="shopping_mall">Near Shopping Mall</string>
    <string name="transportation">Near Transportation</string>
    <string name="tram">Near Tram</string>
    <string name="daily">Per Day</string>
    <string name="monthly">Per Month</string>
    <string name="yearly">Per Year</string>
    <string name="period">Period :</string>
    <string name="thanks">Thanks for helping us make the user experience better.</string>
    <string name="reasons">Reasons</string>
    <string name="specify">Specify</string>
    <string name="email">email</string>
    <string name="register_first">please register first</string>
    <string name="helper_text_max">%1$s/ %2$s</string>
    <string name="out_of_order">Out Of Order</string>
    <string name="no_posts">No posts</string>
    <string name="update">Update</string>
    <string name="set_out_of_order">Set Out Of Order</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Delete Confirmation</string>
    <string name="delete_message">Are you sure You want to delete This post ?</string>
    <string name="real_estate_instagram">https://www.instagram.com/properties.realestate_/</string>
    <string name="out_of">Out of</string>
    <string name="wanted">Wanted</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="warning_title">Warning</string>
    <string name="join_date">On realestatefy since %1$s</string>
    <string name="add_more">Add more</string>
    <string name="post_advert">Post advert</string>
    <string name="latest_news">Latest news</string>
</resources>