<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:icon="@drawable/baseline_format_list_bulleted_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/add_post"
        android:icon="@drawable/baseline_add_business_24"
        android:title="@string/add_a_post" />

    <item
        android:id="@+id/website"
        android:icon="@drawable/internet_svgrepo_com"
        android:title="@string/website" />

    <item
        android:id="@+id/instagram"
        android:icon="@drawable/instagram"
        android:title="@string/instagram" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout" />
</menu>