<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <!-- Building Age -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/property_condition"
        android:textColor="@color/yellow"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/propriety_condition_rg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/lux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/luxury" />

        <RadioButton
            android:id="@+id/excellent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/excellent" />

        <RadioButton
            android:id="@+id/good"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/good" />

        <RadioButton
            android:id="@+id/normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal" />

    </RadioGroup>

    <!-- Number of Bedrooms -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberOfRoomsInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/number_of_rooms"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numberOfRoomsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberOfBathroomsInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/number_of_bathrooms"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numberOfBathroomsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Floor Number -->
    <include
        android:id="@+id/floor_info"
        layout="@layout/floors_layout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/space"
        android:textColor="@color/yellow"
        android:textSize="16sp" />
    <!-- Space -->
    <include
        android:id="@+id/converter"
        layout="@layout/meter_to_foot_converter_layout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/extras"
        android:textColor="@color/yellow"
        android:textSize="16sp" />

    <include android:id="@+id/features"
        layout="@layout/features_layout"/>

</LinearLayout>