<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/type"
            android:textColor="@color/yellow"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/type_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rent_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:background="@drawable/radio_button_bg"
                android:checked="true"
                android:paddingEnd="10dp"
                android:text="@string/rent"
                android:textColor="@color/text_color_state" />

            <RadioButton
                android:id="@+id/buy_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/radio_button_bg"
                android:paddingEnd="10dp"
                android:text="@string/sell"
                android:textColor="@color/text_color_state" />
        </RadioGroup>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:endIconDrawable="@drawable/baseline_arrow_drop_down_24"
        android:hint="@string/category"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/categoryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:lines="1"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/priceTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/price_et"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/priceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:lines="1"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="0dp"
        android:text="@string/period"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/period_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/none"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily" />

        <RadioButton
            android:id="@+id/monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly" />

        <RadioButton
            android:id="@+id/yearly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yearly" />

    </RadioGroup>

    <include
        android:id="@+id/phone_number"
        layout="@layout/phone_number_layout" />

    <LinearLayout
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/whatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/IconCheckboxStyle"
            android:drawableStart="@drawable/icon" />

        <CheckBox
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/IconCheckboxStyle"
            android:drawableStart="@drawable/baseline_call_24"/>


    </LinearLayout>

</LinearLayout>