<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <!-- Building Age -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/buildingAgeInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/building_age">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/buildingAgeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/isFurnishedCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/is_furnished" />

            <!-- Has Balcony CheckBox -->
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/hasBalconyCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/has_balcony" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/isNewCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/is_new" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/hasGymCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/has_gym" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/hasSwimmingPoolCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/has_swimming_pool" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/hasParkingCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/has_parking" />

            <!-- Number of Bedrooms -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numberOfBedroomsInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/number_of_bedrooms">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numberOfBedroomsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Floor Number -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/floorNumberInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/floor_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/floorNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Space -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spaceInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/space">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/spaceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>