<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/whole_image"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/selected_image"
        android:layout_width="@dimen/image_placeholder_size"
        android:layout_height="@dimen/image_placeholder_size"
        android:layout_margin="5dp"
        android:background="@drawable/image_cadre"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/remove"
        app:layout_constraintEnd_toEndOf="@+id/selected_image"
        app:layout_constraintTop_toTopOf="@+id/selected_image"
        app:srcCompat="@android:drawable/ic_delete" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_first"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/selected_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>